@@ -1,3 +1,8 @@
+2006-02-20  Paul D. Smith  <psmith@gnu.org>
+
+	* variable.c (merge_variable_set_lists): It's legal for *setlist0
+	to be null; don't core in that case.
+
 2006-02-19  Paul D. Smith  <psmith@gnu.org>
 
 	* commands.c (set_file_variables): Realloc, not malloc, the static
